- Fix Junit based on updated spec - Fix Internal SA ID setting for Push product Ingestion